Added request ID to CompatGenerate
