# docs/openapi.json
@@ -409,6 +409,11 @@
             "type": "string",
             "example": "My name is Olivier and I"
           },
+          "x_user_request_id": {
+            "type": "string",
+            "example": "1234",
+            "nullable": true
+          },
           "parameters": {
             "$ref": "#/components/schemas/GenerateParameters"
           },
